# demo-mlflow-pipeline

./: .gitignore  Makefile  README.md  mlflow_env.sh
base_container/: Dockerfile
mlflow_services/: docker-compose.yml
model/: .dockerignore  Dockerfile  MLProject  pyproject.toml  test.parquet  train.parquet  train.py
scripts/: build_mlflow_base_container.sh  build_mlflow_model_container.sh  install_local_dependencies.sh  list_registered_models.py  list_registered_models.sh  serve_model.sh  serve_staging_model.sh  start_mlflow_services.sh  stop_mlflow_services.sh  test_api.py  test_api.sh  train_model.sh
