[tool.poetry]
name = "demo-mlflow-pipeline"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.1"
numpy = "^1.19.1"
scikit-learn = "^0.23.2"
mlflow = "^1.11.0"
pyarrow = "^2.0.0"
[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"